--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.28.1",
     "sass": "^1.83.1",
-    "video.js": "^8.21.0"
+    "video.js": "^8.21.0",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
